k8s/gorush-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: gorush
  namespace: gorush
spec:
  replicas: 2
  selector:
    matchLabels:
      app: gorush
      tier: frontend
  template:
    metadata:
      labels:
        app: gorush
        tier: frontend
    spec:
      containers:
        - image: appleboy/gorush:1.22.0
          name: gorush
          imagePullPolicy: Always
          ports:
            - containerPort: 8088
          securityContext:
            capabilities:
              drop:
                - ALL
            runAsNonRoot: true
            runAsUser: 1000
            allowPrivilegeEscalation: false
            readOnlyRootFilesystem: false
          resources:
            requests:
              cpu: "250m"
              memory: "256Mi"
            limits:
              cpu: "500m"
              memory: "512Mi"
          livenessProbe:
            httpGet:
              path: /healthz
              port: 8000
            initialDelaySeconds: 3
            periodSeconds: 3
