k8s/gorush-redis-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: redis
  namespace: gorush
  labels:
    app: redis
    role: master
    tier: backend
spec:
  ports:
    - port: 6379
      targetPort: 6379
  selector:
    app: redis
    role: master
    tier: backend
