k8s/gorush-aws-alb-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: gorush
  namespace: gorush
  annotations:
    # Kubernetes Ingress Controller for AWS ALB
    # https://github.com/coreos/alb-ingress-controller
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/subnets: subnet-aa3dfbe3,subnet-4aff342d
    alb.ingress.kubernetes.io/security-groups: sg-71069b17
spec:
  rules:
    - host: gorush.example.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: gorush
                port:
                  number: 8088
