k8s/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: gorush
  annotations:
    http.port: "8089"
spec:
  backend:
    serviceName: gorush
    servicePort: 8088
